gcc/testsuite/rust/rustc/ui/issues/issue-47623.rs
use self; // { dg-error ".E0429." "" { target *-*-* } }

fn main() {}

